--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,9 +54,11 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\BoardManager.cs" />
+     <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Loader.cs" />
      <Compile Include="Assets\Scripts\MovingObject.cs" />
+     <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\Wall.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>/Users/spencerlouis/Documents/Projects/RogueLike/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
