--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\Scripts\Loader.cs" />
      <Compile Include="Assets\Scripts\MovingObject.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\SoundManager.cs" />
      <Compile Include="Assets\Scripts\Wall.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>/Users/spencerlouis/Documents/Projects/RogueLike/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
